--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,9 @@ body {
 }
 
 .swiper {
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  width: 78%;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -41,6 +43,10 @@ body {
 
 .swiper-pagination-bullet-active {
   background-color: #ffffff !important;
+}
+
+.pcSwiper {
+  width: 100%;
 }
 
 .pcSwiper img {
